# SiGenie

./: README.md
aiffel_gru/ksy974498/: schemas.py  test_atlas_search_sigenie.ipynb  verify_policy.py  verify_policy_test.ipynb  verify_policy_test_org.ipynb  web_search.py  wipLangChain_checkout.ipynb
aiffel_gru/ksy974498/notebooks/: ch1_test.ipynb  ch1_test_ver2.ipynb  ch2_test.ipynb  get_vectorDB.py
dongyang_systems/frontend/: package-lock.json  package.json
dongyang_systems/frontend/env/: .env.production
dongyang_systems/frontend/public/: index.html
dongyang_systems/frontend/src/: App.tsx  index.css  index.tsx
dongyang_systems/frontend/src/components/: InterfaceDefinition.ts  SiGenie.tsx  StyledComponents.tsx  landing_en.tsx  landing_kr.tsx
dongyang_systems/frontend/src/styles/: docPreview.css  draftBL.css  fonts.css  siGenie.css
dongyang_systems/frontend/src/utils/: EndpointUtil.ts  TemporaryUtil.tsx
dongyang_systems/sigenie/: .gitignore  LICENSE  README.md  db.py  main.py  pyproject.toml
dongyang_systems/sigenie/app/: __init__.py  json_bkg.py  json_bl.py  json_si.py  search_compliance.py  search_compliance_qe.py  search_si.py
dongyang_systems/sigenie/prompts/: compliance_rag_prompt.yaml
dongyang_systems/sigenie/utils/: __init__.py  helpers.py
main/: README.md  start_project.sh
main/backend/: .env_sample  Dockerfile  README.md  ch1.py  ch2.py  docker-compose.yml  main.py  pyproject.toml
main/backend/common/: __init__.py  agents.py  d_prompts.py  d_schemas.py  models.py  prompts.py  schemas.py  tools.py  vectorstore.py
main/backend/vector/compliance_faiss_index/: index.faiss  index.pkl  last_update.txt
main/backend/vector/si_faiss_index/: last_update.txt
main/frontend/: README.md  package-lock.json  package.json
main/frontend/src/: App.tsx
main/frontend/src/components/: ChatInput.tsx  DocPreview.tsx  DraftBL.tsx  LinkPreview.tsx  SiGenie.tsx  SiResponseContent.tsx
main/frontend/src/styles/: landing.css
main/frontend/src/utils/: TemporaryUtil.tsx
st_si_validation_story/: app.py  pyproject.toml
st_si_validation_story/graphs/: si_intake_graph.py  si_validation_graph.py  st_si_intake_graph.py  st_si_validation_graph.py
st_si_validation_story/graphs/nodes/common/: agents.py  models.py  prompts.py  schemas.py  tools.py
st_si_validation_story/graphs/nodes/si_intake/: check_missing_data.py  generate_intake_report.py  get_bkg.py  get_si.py  si_intake_state.py
st_si_validation_story/graphs/nodes/si_validation/: check_parties.py  generate_validation_report.py  si_validation_state.py  verify_company_policy.py  verify_vessel_port_situation.py
st_si_validation_story/layouts/pages/: _page_templates.py  ch1_si_intake_page.py  ch2_si_validation_page.py
st_si_validation_story/layouts/pages/STYLES/: bl_styles.py
st_si_validation_story/layouts/viewer_pages/: json_bkg.py  json_bl.py  json_si.py  load_bl.py  party_list.py
